[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "uzdabrazor"
version = "1.0.2"
description = "The Anal-King of AI Browser Automation - A beautifully fucked-up browser automation script that actually works"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "uzdabrazor", email = "uzdabrazor@example.com" }]
maintainers = [{ name = "uzdabrazor", email = "uzdabrazor@example.com" }]
keywords = [
    "browser-automation",
    "playwright",
    "web-scraping",
    "stealth",
    "bot-detection",
    "llm",
    "ai-automation",
    "browser-use",
    "patchright",
    "automation",
    "scraping",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
]
requires-python = ">=3.11"
dependencies = [
    "browser-use>=0.1.0",
    "python-dotenv>=1.0.0",
    "Pillow>=9.0.0",
    "patchright>=1.0.0",
]

[project.optional-dependencies]
build = ["build>=1.0.0", "hatchling>=1.21.0", "twine>=4.0.0"]

[project.urls]
Homepage = "https://github.com/uzdabrazor/anal-core"
Documentation = "https://github.com/uzdabrazor/anal-core#readme"
Repository = "https://github.com/uzdabrazor/anal-core.git"
"Bug Tracker" = "https://github.com/uzdabrazor/anal-core/issues"
Changelog = "https://github.com/uzdabrazor/anal-core/blob/main/CHANGELOG.md"

[project.scripts]
uzdabrazor = "uzdabrazor.cli:main"

[tool.hatch.version]
path = "uzdabrazor/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["uzdabrazor"]

[tool.hatch.build.targets.sdist]
include = [
    "/uzdabrazor",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
    "/.env.example",
]
exclude = [
    "/.git*",
    "/venv",
    "/build",
    "/dist",
    "/__pycache__",
    "/*.egg-info",
    "/device_id",
    "/extensions",
    "/profiles",
    "*.pyc",
    ".DS_Store",
]
